--- a/app/views/cms/users/edit.html.erb
+++ b/app/views/cms/users/edit.html.erb
@@ -1,10 +1,14 @@
 <% if @user.role == 'teacher'%>
   <%= react_component('TeacherAccountApp', props: {userType: @current_user.role, teacherId: @user.id})%>
 <%else%>
-  <div class="article simple-rounded-box">
-    <h1>Editing User</h1>
-    <br>
-    <br>
-    <%= render "form" %>
-  </div>
+  <div class='container'>
+    <article class='simple-rounded-box cms-container'>
+      <%= link_to 'User Directory', cms_users_path %> > Edit
+      <br /><br />
+      <h2>Edit: <%= @user.name %></h2>
+      <br />
+      <br />
+      <%= render "form" %>
+    </article>
+</div>
 <%end%>
