--- a/app/views/cms/users/index.html.erb
+++ b/app/views/cms/users/index.html.erb
@@ -5,10 +5,10 @@
         <h1>User Directory</h1>
         <%= link_to 'Add New User', new_cms_user_path, class: 'btn button-green'  %>
       </div>
-      <%= form_tag search_cms_users_path, class: 'cms-search-form' do %>
+      <%= form_tag search_cms_users_path, class: 'cms-form' do %>
         <div class='cms-meta-middle'>
           <% @text_search_inputs.each do |attribute| %>
-            <div class='cms-search-form-row'>
+            <div class='cms-form-row'>
               <%= label_tag attribute, "#{attribute.gsub('_', ' ').titleize}" %>
               <%= text_field_tag attribute, @user_search_query[attribute] ? @user_search_query[attribute] : '' %>
             </div>
@@ -16,24 +16,24 @@
         </div>
 
         <div class='cms-meta-right'>
-          <div class='cms-search-form-row'>
+          <div class='cms-form-row'>
             <%= label_tag 'user_premium_status', 'Premium Status' %>
             <%= select_tag 'user_premium_status', options_for_select(@school_premium_types, @user_search_query['user_premium_status'] ? @user_search_query['user_premium_status'] : []), multiple: true %>
           </div>
 
-          <div class='cms-search-form-row'>
+          <div class='cms-form-row'>
             <%= label_tag 'user_role', 'Role' %>
             <%= select_tag 'user_role', options_for_select(@user_role_types, @user_search_query['user_role']), include_blank: true %>
           </div>
 
-          <div class='cms-search-submit-row'>
+          <div class='cms-submit-row'>
             <%= submit_tag 'Search' %>
           </div>
         </div>
       <% end %>
     </div>
 
-    <table class='cms-search-results-table'>
+    <table class='cms-results-table'>
       <thead>
         <tr>
           <% # THIS ORDER MATCHES ORDER OF ATTRIBUTES IN USERS_CONTROLLER. %>
