--- a/app/views/cms/schools/edit_subscription.html.erb
+++ b/app/views/cms/schools/edit_subscription.html.erb
@@ -6,12 +6,12 @@
     <br />
     <div class='cms-form'>
       <%= form_tag update_subscription_cms_school_path(params[:id]) do %>
-        <div class=''>
+        <div class='cms-form-row'>
           <%= label_tag 'premium_status', 'Premium Status' %>
           <%= select_tag 'premium_status', options_for_select(@school_premium_types, @account_type), include_blank: true %>
         </div>
 
-        <div class=''>
+        <div class='cms-form-row'>
           <%= label_tag 'expiration_date', 'Expiration Date' %>
           <%= select_date @expiration_date, prefix: :expiration_date %>
         </div>
