Add pagination to cms schools search

--- a/app/assets/stylesheets/cms/cms.scss
+++ b/app/assets/stylesheets/cms/cms.scss
@@ -87,6 +87,7 @@
     border: 1px solid #eee;
     display: inline-block;
     font-size: 16px;
+    margin-bottom: 3px;
     padding: 4px;
     text-align: center;
     width: 28px;
