--- a/app/views/cms/schools/index.html.erb
+++ b/app/views/cms/schools/index.html.erb
@@ -23,10 +23,11 @@
 
           <div class='cms-form-row cms-checkbox-row'>
             <%= label_tag 'search_schools_with_zero_teachers', 'Include Schools with 0 Teachers' %>
-            <%= check_box_tag 'search_schools_with_zero_teachers', @school_search_query['search_schools_with_zero_teachers'] %>
+            <%= check_box_tag 'search_schools_with_zero_teachers', @school_search_query['search_schools_with_zero_teachers'], @school_search_query['search_schools_with_zero_teachers'] ? 'checked' : nil %>
           </div>
 
           <div class='cms-submit-row'>
+            <%= hidden_field_tag 'page', 1 %>
             <%= submit_tag 'Search' %>
           </div>
         </div>
@@ -53,5 +54,16 @@
         <% end %>
       </tbody>
     </table>
+    <div class='cms-pagination-container'>
+      <% (1..@number_of_pages).to_a.each do |page| %>
+        <%= link_to page, '#!', onclick: "submitForm(#{page})", class: "cms-pagination #{ page == @school_search_query['page'].to_i ? 'cms-pagination-current' : nil}" %>
+      <% end %>
+    </div>
   </article>
 </div>
+<script>
+  function submitForm(page) {
+    document.getElementById('page').value = page;
+    document.getElementsByClassName('cms-form')[0].submit();
+  }
+</script>
