align carats in student submission table headers

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -72,6 +72,10 @@
           &:nth-of-type(4), &:nth-of-type(5), &:nth-of-type(7) {
             text-align: center;
           }
+          span {
+            display: flex;
+            align-items: center;
+          }
           p {
             cursor: pointer;
             color: #027360;
