--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -17,17 +17,17 @@
       <tbody>
         <% @teacher_data.each do |teacher| %>
           <tr>
-            <% teacher.values[0...-2].each do |value| %>
-              <td><%= value || 'N/A' %></td>
+            <% %w(teacher_name number_classrooms number_students number_activities_completed last_active subscription).each do |attribute| %>
+              <td><%= teacher[attribute] || 'N/A' %></td>
             <% end %>
             <td>
-              <% if teacher.values[-1] == 'admin' %>
-                <%= link_to 'Remove Admin', remove_admin_cms_user_path(teacher.values[-2]), method: :put %>
+              <% if teacher['user_role'] == 'admin' %>
+                <%= link_to 'Remove Admin', remove_admin_cms_user_path(teacher['user_id']), method: :put %>
               <% else %>
-                <%= link_to 'Make Admin', make_admin_cms_user_path(teacher.values[-2]), method: :put %>
+                <%= link_to 'Make Admin', make_admin_cms_user_path(teacher['user_id']), method: :put %>
               <% end %>
             </td>
-            <td><%= link_to 'Sign In', sign_in_cms_user_path(teacher.values[-2]), method: :put %></td>
+            <td><%= link_to 'Sign In', sign_in_cms_user_path(teacher['user_id']), method: :put %></td>
           </tr>
         <% end %>
       </tbody>
