vertically center student count in sidebar

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -77,6 +77,9 @@
         img {
           margin-right: 4px;
         }
+        span {
+          margin-top: -2px;
+        }
       }
       .slide-number {
         width: 300px;
