fix impact page
fixed the missing closing bracket for div

--- a/app/views/pages/impact.html
+++ b/app/views/pages/impact.html
@@ -3,7 +3,7 @@
 
 
 <div class="white-background">
-  <div class="container pages-container white-page"
+  <div class="container pages-container white-page">
        
       <h4><strong>Kim Hinderlie, Elma Elementary School</strong></h4>
       <i>124 students; 392 activities completed</i>
