--- a/app/views/cms/users/edit.html.erb
+++ b/app/views/cms/users/edit.html.erb
@@ -1,14 +1,11 @@
-<% if @user.role == 'teacher'%>
-  <%= react_component('TeacherAccountApp', props: {userType: @current_user.role, teacherId: @user.id})%>
-<%else%>
-  <div class='container'>
-    <article class='simple-rounded-box cms-container'>
-      <%= link_to 'User Directory', cms_users_path %> > Edit
-      <br /><br />
-      <h2>Edit: <%= @user.name %></h2>
-      <br />
-      <br />
-      <%= render "form" %>
-    </article>
+<div class='container'>
+  <article class='simple-rounded-box cms-container'>
+    <%= link_to 'User Directory', cms_users_path %> > Edit
+    <br /><br />
+    <h2>Edit: <%= @user.name %></h2>
+    <br />
+    <%= link_to 'Edit Subscription', edit_subscription_cms_user_path(params[:id]), class: 'btn button-green' %>
+    <br /><br />
+    <%= render "form" %>
+  </article>
 </div>
-<%end%>
