rewrite faq page as erb and update all copy

--- a/app/assets/stylesheets/pages/misc-pages.scss
+++ b/app/assets/stylesheets/pages/misc-pages.scss
@@ -74,3 +74,12 @@
 .white-page {
 	background-color: #FFFFFF;
 }
+
+.pages-faq {
+	a, .tool-attempt {
+		font-weight: 600;
+	}
+	ul {
+		margin-top: 10px;
+	}
+}
