--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -28,11 +28,11 @@
 
       <div id="quill-tools" class="question">
         <h4>What are Quill's tools?</h4>
-        <p><strong>Quill Diagnostic</strong>: Identify Learning Gaps and Assign Personalized Learning Plans</p>
-        <p><strong>Quill Lessons</strong>: Shared Group Lessons</p>
-        <p><strong>Quill Connect</strong>: Combine Sentences</p>
-        <p><strong>Quill Grammar</strong>: Practice Mechanics</p>
-        <p><strong>Quill Proofreader</strong>: Fix Errors In Passages</p>
+        <p><span>Quill Diagnostic</span>: Identify Learning Gaps and Assign Personalized Learning Plans</p>
+        <p><span>Quill Lessons</span>: Shared Group Lessons</p>
+        <p><span>Quill Connect</span>: Combine Sentences</p>
+        <p><span>Quill Grammar</span>: Practice Mechanics</p>
+        <p><span>Quill Proofreader</span>: Fix Errors In Passages</p>
       </div>
 
       <div id="who-uses-quill" class="question">
@@ -42,10 +42,10 @@
 
       <div id="integrating-quill" class="question">
         <h4>How can I integrate Quill into my classroom?</h4>
-        <p><strong>Do Now</strong>: Use Quill’s activities as a quick daily warm-up at the beginning of class.</p>
-        <p><strong>Whole-Class Lessons</strong>: Lead whole-class interactive and small group writing instruction.</p>
-        <p><strong>Independent Practice</strong>: Use Quill after a mini lesson to reinforce your instruction.</p>
-        <p><strong>Homework</strong>: Assign Quill as homework for students to complete on a smartphone or a computer.</p>
+        <p><span>Do Now</span>: Use Quill’s activities as a quick daily warm-up at the beginning of class.</p>
+        <p><span>Whole-Class Lessons</span>: Lead whole-class interactive and small group writing instruction.</p>
+        <p><span>Independent Practice</span>: Use Quill after a mini lesson to reinforce your instruction.</p>
+        <p><span>Homework</span>: Assign Quill as homework for students to complete on a smartphone or a computer.</p>
       </div>
 
       <div id="which-grammar-concepts" class="question">
@@ -84,8 +84,8 @@
       <div id="smartphones-and-tablets" class="question">
         <h4>Can Quill be used on smartphones and tablets?</h4>
         <p>Yes, Quill works on iPhones, Android devices and all tablets including Kindles. Students can start and finish their independent practice on any of these devices and they can follow along with your slides in the group mode.</p>
-        <p><strong>Recommendation:</strong> If students are using Quill on a tablet, for better typing we recommend using a keyboard with the tablet. We have seen that students perform better and type faster with a keyboard rather than a touchscreen.</p>
-        <p><strong>Coming soon:</strong> We are currently working on a mobile app that will allow students to do their homework or independent practice on their phone while offline and share their score with their teachers when they are back online.</p>
+        <p><span>Recommendation:</span> If students are using Quill on a tablet, for better typing we recommend using a keyboard with the tablet. We have seen that students perform better and type faster with a keyboard rather than a touchscreen.</p>
+        <p><em>Coming soon:</em> We are currently working on a mobile app that will allow students to do their homework or independent practice on their phone while offline and share their score with their teachers when they are back online.</p>
       </div>
 
       <div id="what-technologies" class="question">
@@ -113,6 +113,7 @@
       </div>
 
       <div id="how-much-time" class="question">
+        <h4>How much time should my students spend on Quill?</h4>
         <p>Quill is a supplemental tool, and each activity takes 10-15 minutes. We recommend that students complete 2-3 activities a week over eight weeks in order to see an improvement in their writing.</p>
       </div>
 
@@ -154,13 +155,13 @@
           <h4>What happens if a student wants to retry an activity?</h4>
           <p>As of January 2017, Quill provides four tools to help students improve their writing, grammar, and proofreading skills. Each tool provides a different level of feedback for students.</p>
 
-          <p class="tool-attempt">Quill Proofreader: One Attempt</p>
+          <p><span>Quill Proofreader: One Attempt</span></p>
           <p>In Quill Proofreader, students proofread a passage to find and correct the errors. Students are given one attempt to find the errors, and if they do not find them, they see the error highlighted in red.</p>
 
-          <p class="tool-attempt">Quill Grammar: Two Attempts</p>
+          <p><span>Quill Grammar: Two Attempts</span></p>
           <p>Students are able to attempt each Quill Grammar question twice. If they get it right on the second attempt, students receive full credit for the question. If they answer incorrectly twice they move on to the next question.</p>
 
-          <p class="tool-attempt">Quill Connect: Five Attempts</p>
+          <p><span>Quill Connect: Five Attempts</span></p>
           <p>In Quill Connect, Quill's sentence combining tool, students are provided with up to five opportunities to revise their work. Students receive instant feedback after each attempt.</p>
           <p>If a student receives writes a strong answer on the first attempt, the student receives full credit. If the student writes a strong sentence after receiving feedback, the student receives partial credit. Quill Connect exercises are graded on the following logic:</p>
           <ul>
@@ -171,7 +172,7 @@
             <li>5th Attempt: 0 Points</li>
           </ul>
 
-          <p class="tool-attempt">Quill Diagnostic: One Attempt</p>
+          <p><span>Quill Diagnostic: One Attempt</span></p>
           <p>Students are not provided with any feedback on the diagnostic. Since we are using it to gauge the student's skills, we show some questions that are intentionally difficult to assess their needs. Students do not see their scores at the end, and every student earns a 100% score for a Quill Diagnostic exercise on the dashboard.</p>
 
       </div>
