--- a/app/views/cms/schools/show.html.erb
+++ b/app/views/cms/schools/show.html.erb
@@ -21,10 +21,10 @@
               <td><%= teacher[attribute] || 'N/A' %></td>
             <% end %>
             <td>
-              <% if teacher['user_role'] == 'admin' %>
-                <%= link_to 'Remove Admin', remove_admin_cms_user_path(teacher['user_id']), method: :put %>
+              <% unless teacher['admin_id'].blank? %>
+                <%= link_to 'Remove Admin', cms_user_remove_admin_path(user_id: teacher['user_id'], school_id: params[:id]), method: :put %>
               <% else %>
-                <%= link_to 'Make Admin', make_admin_cms_user_path(teacher['user_id']), method: :put %>
+                <%= link_to 'Make Admin', cms_user_make_admin_path(user_id: teacher['user_id'], school_id: params[:id]), method: :put %>
               <% end %>
             </td>
             <td><%= link_to 'Sign In', sign_in_cms_user_path(teacher['user_id']), method: :put %></td>
