rewrite score legend in flexbox; add completed and in progress keys

--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -12,8 +12,18 @@
 			.icon {
 				display: flex;
 				align-items: center;
+				.icon-wrapper {
+					position: relative;
+				}
 			}
 		}
+	}
+
+	.in-progress-symbol {
+		vertical-align: middle;
+		position: absolute;
+		top: -8px;
+		right: -8px;
 	}
 
 	.dropdown-menu {
