--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -44,6 +44,20 @@
   background: #b7b7b7;
 }
 
+.icon-blue {
+  background-color: #348fdf;
+}
+
+.icon-progress {
+  background-color: #ffffff;
+  border: solid 1px #348fdf;
+}
+
+.icon-unstarted {
+  background-color: #f6f3f3;
+  border: solid 1px #969696;
+}
+
 .icon-pencil {
   background-image: image-url("scorebook/icon-pencil.png");
   background-repeat: no-repeat;
