--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,10 +91,11 @@
 }
 
 @media screen and (max-width: 992px) {
-  .app-legend {
+  .app-legend, .score-legend {
     .icon {
       flex-direction: column;
       align-items: center;
+      text-align: center;
       .icons-description-wrapper {
         margin-left: 0px;
         margin-top: 10px;
@@ -206,7 +207,7 @@ button:not(.select-mixin) {
   line-height: 40px;
 }
 
-.title-not-started {
+.title-not-started, .title-single-line {
   line-height: 40px;
   position: static;
 }
