style started and completed activity icons in scorebook

--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -30,11 +30,20 @@
 		}
 	}
 
-	.in-progress-symbol {
+	.in-progress-symbol, .attempt-symbol {
 		vertical-align: middle;
 		position: absolute;
 		top: -8px;
 		right: -8px;
+	}
+
+	.attempt-count {
+		color: white;
+		position: absolute;
+		right: -1px;
+		font-weight: 800;
+		top: -6px;
+		font-size: 11px;
 	}
 
 	.dropdown-menu {
