--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -183,7 +183,7 @@
 .icon-puzzle-embossed {
   background-image: url("http://assets.quill.org/images/scorebook/grammar-embossed.svg");
   background-repeat: no-repeat;
-  background-position: 11px 7px;
+  background-position: center;
 }
 
 .icon-lessons-embossed {
@@ -207,5 +207,5 @@
 .icon-connect-embossed {
   background-image: url("https://assets.quill.org/images/scorebook/connect-embossed.svg");
   background-repeat: no-repeat;
-  background-position: 9px;
+  background-position: center;
 }
