fix diagnostic positioning

--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -202,7 +202,7 @@
 .icon-diagnostic-embossed {
   background-image: url("https://assets.quill.org/images/scorebook/diagnostic-embossed.svg");
   background-repeat: no-repeat;
-  background-position: 9px;
+  background-position: center;
 }
 .icon-connect-embossed {
   background-image: url("https://assets.quill.org/images/scorebook/connect-embossed.svg");
