--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -60,15 +60,22 @@ $accentcolor: #00a699;
 .calendar-prefill-options {
 	margin-top: -10px;
 	padding: 0 20px 20px;
+	text-align: center;
 
 	.calendar-prefill-option {
 		border-radius: 5px;
+		border: 1px solid #eee;
 		color: #666;
-		font-size: 16px;
+		display: inline-block;
+		font-size: 14px;
 		font-weight: 600;
+		margin: 3px;
 		padding: 8px;
+		transition: all 0.3s ease;
 
 		&:hover {
+			background-color: #fefefe;
+			border-color: #ddd;
 			color: #333;
 		}
 	}
