--- a/app/assets/stylesheets/shared/notification_bar.scss
+++ b/app/assets/stylesheets/shared/notification_bar.scss
@@ -1,4 +1,4 @@
-.notification-bar {
+.notification-bar, .upgraded_bar {
   background-color: $quillblue;
   margin: 0;
   width: 100%;
@@ -18,5 +18,20 @@
 
   @media screen and (max-width: 501px) {
     display: none;
+  }
+}
+
+.upgraded-bar {
+  p {
+
+    span {
+      font-weight: bold;
+    }
+    a {
+      font-weight: 600;
+    }
+    i {
+      margin-right: 6px;
+    }
   }
 }
