Minor style adjustments for datepicker

--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -405,6 +405,7 @@ $accentcolor: #00a699;
 
 .DayPickerKeyboardShortcuts__show,
 .DayPickerKeyboardShortcuts__close {
+	display: none;
   background: none;
   border: 0;
   color: inherit;
