add new teacher fix for recovering activity sessions

--- a/app/assets/stylesheets/pages/teacher_fixes.scss
+++ b/app/assets/stylesheets/pages/teacher_fixes.scss
@@ -11,6 +11,10 @@
   p {
     font-size: 16px;
     margin-bottom: 10px;
+    span {
+      font-size: 13px;
+      font-style: italic;
+    }
   }
   .input-row {
     margin:10px auto;
